# STEPP-Code

./: README.md  setup.py
STEPP/: __init__.py
STEPP/DINO/: __init__.py  backbone.py  dino_feature_extract.py
STEPP/SLIC/: SLIC_single.py  slic_segmentation.py
STEPP/model/: mlp.py  training.py
STEPP/utils/: colorbar.py  data_loader.py  extract_future_poses.py  image_saver.py  make_dataset.py  make_unreal_data_pixel_file.py  misc.py  rename_files.py  testing.py
STEPP_ros/: CMakeLists.txt  package.xml
STEPP_ros/launch/: STEPP.launch
STEPP_ros/msg/: Float32Stamped.msg
STEPP_ros/scripts/: inference_node.py
STEPP_ros/src/: depth_projection_synchronized.cpp
checkpoints/: all_ViT_small_input_700_big_nn_checkpoint_20240827-1935.pth  richmond_forest_ViT_small_700_big_nn.pth  rpl_lab_ViT_small_big_nn.pth  unreal_full_ViT_small_big_nn_checkpoint_20240819-2003.pth
